flux.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: awsome-app-flux
  labels:
    app: app
  annotations:
    fluxcd.io/automated: "true"  
spec:
  replicas: 2
  selector:
    matchLabels:
      app: awsome-app-flux
  template:
    metadata:
      labels:
        app: awsome-app-flux
    spec:
      containers:
      - name: awsome-app-flux
        image: 957288871734.dkr.ecr.ap-southeast-1.amazonaws.com/images
        
apiVersion: v1
kind: Service
metadata: 
  name: awsome-app-flux-svc
spec:
  selector:
    app: awsome-app-flux
  ports:
    - protocol: "TCP"
      port: 8080 
      targetPort: 8080 
  type: NodePort
